fix: more reasonable spacing on lists

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,5 +58,5 @@ p {
 
 ul li {
   /* Increase the default spacing between list items */
-  margin-bottom: 0.6em;
+  margin-bottom: 0.4em;
 }
